# src/neoloan/calculator/src/main/resources/openapi/models.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 
 info:
   title: "DTO models for Calculator"
@@ -108,20 +108,117 @@ components:
         workExperienceCurrent:
           type: integer
 
-#    ScoringData:
-#      type: object
-#      properties:
-#        amount:
-#          $ref: 'components.yaml#/components/schemas/Amount'
-#        term:
-#          type: integer
-#        firstName:
-#          $ref: 'components.yaml#/components/schemas/Name'
-#        lastName:
-#          $ref: 'components.yaml#/components/schemas/Name'
-#        middleName:
-#          $ref: 'components.yaml#/components/schemas/Name'
-#        gender:
-#          type: string
-#          enum: ["MALE", "FEMALE", "NON_BINARY"]
-#        bir
+    ScoringData:
+      type: object
+      required:
+        - amount
+        - dependentAmount
+        - firstName
+        - lastName
+        - middleName
+        - gender
+        - birthdate
+        - passportSeries
+        - passportNumber
+        - passportIssueBranch
+        - passportIssueDate
+        - maritalStatus
+        - employment
+        - accountNumber
+        - isInsuranceEnabled
+        - isSalaryClient
+      properties:
+        amount:
+          $ref: 'components.yaml#/components/schemas/Amount'
+        term:
+          type: integer
+        firstName:
+          $ref: 'components.yaml#/components/schemas/Name'
+        lastName:
+          $ref: 'components.yaml#/components/schemas/Name'
+        middleName:
+          $ref: 'components.yaml#/components/schemas/Name'
+        gender:
+          type: string
+          enum: ["MALE", "FEMALE", "NON_BINARY"]
+        birthdate:
+          type: string
+          format: date
+        passportSeries:
+          type: string
+          minLength: 4
+          maxLength: 4
+        passportNumber:
+          type: string
+          minLength: 6
+          maxLength: 6
+        passportIssueDate:
+          type: string
+          format: date
+        passportIssueBranch:
+          type: string
+          format: date
+        maritalStatus:
+          type: string
+          enum: ["MARRIED", "DIVORCED", "SINGLE", "WIDOW_WIDOWER"]
+        dependentAmount:
+          type: integer
+        employment:
+          type: object
+          $ref: '#/components/schemas/Employment'
+        accountNumber:
+          type: string
+        isInsuranceEnabled:
+          type: boolean
+        isSalaryClient:
+          type: boolean
+
+    PaymentScheduleElement:
+      type: object
+      required:
+        - number
+        - totalAmount
+        - interestPayment
+        - debtPayment
+        - remainingDebt
+      properties:
+        number:
+          type: integer
+        totalAmount:
+          $ref: 'components.yaml#/components/schemas/Amount'
+        interestPayment:
+          $ref: 'components.yaml#/components/schemas/Amount'
+        debtPayment:
+          $ref: 'components.yaml#/components/schemas/Amount'
+        remainingDebt:
+          $ref: 'components.yaml#/components/schemas/Amount'
+
+    Credit:
+      type: object
+      required:
+        - amount
+        - monthlyPayment
+        - rate
+        - psk
+        - isInsuranceEnabled
+        - isSalaryClient
+        - paymentSchedule
+      properties:
+        amount:
+          $ref: 'components.yaml#/components/schemas/Amount'
+        term:
+          type: integer
+        monthlyPayment:
+          $ref: 'components.yaml#/components/schemas/Amount'
+        rate:
+          $ref: 'components.yaml#/components/schemas/Amount'
+        psk:
+          $ref: 'components.yaml#/components/schemas/Amount'
+        isInsuranceEnabled:
+          type: boolean
+        isSalaryClient:
+          type: boolean
+        paymentSchedule:
+          type: array
+          items:
+            $ref: '#/components/schemas/PaymentScheduleElement'
